--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
 import(HMMcopy, plyr, GenomeInfoDb)
 export(loadReadCountsFromWig, normalizeByPanelOrMatchedNormal, getDefaultParameters,
-       HMMsegment, plotGWSolution, correctIntegerCN, getSeqInfo, 
-       wigToGRanges, outputHMM, outputParametersToFile, plotSolutions)
+       HMMsegment, plotGWSolution, correctIntegerCN, getSeqInfo,
+       wigToGRanges, outputHMM, outputParametersToFile, plotSolutions, runIchorCNA)
